--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -1,6 +1,11 @@
 name: Github Actions Demo
 on: 
   workflow_dispatch:
+    inputs:
+        environment:
+          description: 'Environment to deploy to'
+          type: environment
+          required: true
   schedule:
     - cron: "15 6 * * 0"
   push:
