--- a/.github/workflows/github-actions-demo_v2.yml
+++ b/.github/workflows/github-actions-demo_v2.yml
@@ -15,6 +15,21 @@ on:
       - .github/**
 
 jobs:
+  Build:
+  runs-on: ubuntu-latest
+  steps:
+    - name: "Print variables"
+      shell: python
+      run: |
+        import os
+        print(os.getenv("GITHUB_EVENT_NAME"))
+        print(os.getenv("GITHUB_REF"))
+    
+    - uses: actions/checkout@main
+
+    - name: "list"
+      shell: bash
+      run: tree
   Test:
     runs-on: ubuntu-latest
     if: github.event_name == 'workflow_dispatch'
