--- a/.github/workflows/reusable.yml
+++ b/.github/workflows/reusable.yml
@@ -17,7 +17,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Greet someone
-        run: echo "Hello ${{ inputs.who-to-greet }}"
+        run: echo "Hello ${{ inputs.user }}"
       - name: Set time
         id: time
         run: echo "current-time=$(date)" >> $GITHUB_OUTPUT
