--- a/.github/workflows/reusable.yml
+++ b/.github/workflows/reusable.yml
@@ -20,4 +20,4 @@ jobs:
         run: echo "Hello ${{ inputs.user }}"
       - name: Set time
         id: time
-        run: echo "current-time=$(date)" >> $GITHUB_OUTPUT
+        run: echo "time=$(date)" >> $GITHUB_OUTPUT
